--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -4,10 +4,7 @@
 }
 .info-container {
   display: grid;
-  grid-template-columns: 67% auto;
-}
-.points {
-  margin-top: -5%;
+  grid-template-rows: auto;
 }
 .mat-button {
   border: solid black .5px;
@@ -16,13 +13,21 @@
   font-size: 22px;
   margin-left: 10%;
 }
+.mat-card-title {
+  display: grid;
+  grid-template-columns: 82.3% 17.7%;
+}
+.amount {
+  font-size: 1rem;
+}
 .mat-card {
   background: rgb(12, 36, 100);
   margin-top: 1em;
   margin-bottom: 1em;
 }
-.sub-points {
-  margin-top: -6%;
+.sub-mat-card-title {
+  display: grid;
+  grid-template-columns: 78.8% 21.2%;
 }
 .sub-product {
   background: rgb(43, 126, 235);
