--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -25,16 +25,16 @@
             <ng-container matColumnDef="column1">
               <th mat-header-cell *matHeaderCellDef>Name</th>
               <td mat-cell *matCellDef="let element">{{element.productName}}</td>
-              <td mat-footer-cell *matFooterCellDef>Total Items:</td>
+              <!-- <td mat-footer-cell *matFooterCellDef>Total Items:</td> -->
             </ng-container>
             <ng-container matColumnDef="column2">
               <th mat-header-cell *matHeaderCellDef>Amount</th>
               <td mat-cell *matCellDef="let element">{{element.amount}}</td>
-              <td mat-footer-cell *matFooterCellDef>{{'Figure Me Out'}}</td>
+              <!-- <td mat-footer-cell *matFooterCellDef>{{'Figure Me Out'}}</td> -->
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="columns"></tr>
             <tr mat-row *matRowDef="let row; columns: columns"></tr>
-            <tr mat-footer-row *matFooterRowDef="columns"></tr>   
+            <!-- <tr mat-footer-row *matFooterRowDef="columns"></tr>    -->
           </table>
           <div class="items-toolbar bottom-table"></div>
       </ng-container>
