--- a/src/app/components/product-type/product-type.component.html
+++ b/src/app/components/product-type/product-type.component.html
@@ -10,11 +10,11 @@
     </mat-expansion-panel-header>
     <mat-card *ngIf="typeMaxAmount != null" [ngClass]="{'sub-type-max-amount' : subType}">
       {{'You are allowed ' + typeMaxAmount + ' items from the below products.'}}
-      <br>
-      {{'Each item is 1 ' + type.unit  + '.'}}
+      <!-- <br>
+      {{'Each item is 1 ' + type.unit  + '.'}} -->
       <br>
       {{typeTracker.typeAmountInCart === 0 ? 'None in Cart':
-          typeTracker.typeAmountInCart >= 1 ? 
+          typeTracker.typeAmountInCart > 1 ? 
           typeTracker.typeAmountInCart + ' ' + type.typeName + ' Products in Cart' : 
           typeTracker.typeAmountInCart + ' ' + type.typeName + ' Product in Cart'
       }}
