bug with setProdMaxAmount not setting for school; type max wasn't setting for school either; fixed these bugs; code might be unreadable

--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -1,7 +1,7 @@
 <div class="flex-grid">
   <aside id="aside">
       <mat-toolbar>Something</mat-toolbar>  
-      <mat-card>More of something over and over again</mat-card>
+      <mat-card>A Greeting Goes Here</mat-card>
   </aside>
   <main id="familyForm">
     <mat-toolbar>Family Information</mat-toolbar>  
@@ -76,9 +76,9 @@
               <mat-option [value]=4>4</mat-option>
               <mat-option [value]=5>5</mat-option>
               <mat-option [value]=6>6</mat-option>
-              <mat-option [value]=7>7</mat-option>
+              <!-- <mat-option [value]=7>7</mat-option>
               <mat-option [value]=8>8</mat-option>
-              <mat-option [value]=9>9+</mat-option>
+              <mat-option [value]=9>9+</mat-option> -->
             </mat-select>
           </mat-form-field>
         </div>  
