Restyled log-in and family (much better); put in question modals

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,29 @@
-/* button {
-    margin-top: 25%;
-} */
+#grid-container {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
+}
+img {
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .mat-card {
-    margin-top: 4%;
+    background: #603A17;
+    border-radius: 10px;
+    /* min-width: 700px; */
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    justify-items: center;  
+}
+#message-button-container {
+    justify-items: center;
+}
+button {
+    background-color: #F6D936;
+    border: solid black .5px;
+    color: black;
+    margin-left: 15%;
 }
