--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -1,60 +1,48 @@
+<app-navbar></app-navbar>
 <div class="flex-grid">
-  <aside id="aside">
-      <mat-toolbar>Something</mat-toolbar>  
-      <mat-card>A Greeting Goes Here</mat-card>
-  </aside>
-  <main id="familyForm">
+  <main id="family-form">
     <mat-toolbar>Family Information</mat-toolbar>  
     <mat-card>
       <form [formGroup]="familyForm">  
-      
-        <div id="name">
+
+        <div>
           <mat-form-field>
             <mat-label>First Name</mat-label>
-            <input matInput formControlName="firstName" required>
+            <input matInput formControlName="firstName">
+            <mat-error *ngIf="familyForm.get('firstName').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Last Name</mat-label>
-            <input matInput formControlName="lastName" required>
+            <input matInput formControlName="lastName">
+            <mat-error *ngIf="familyForm.get('lastName').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
         </div>
 
-        <div id="birthDate">
-          <mat-form-field>
-            <mat-label>Birth Date</mat-label>
-            <input matInput [matDatepicker]="birthDatePicker" [min]="minDate" [max]="maxDate" placeholder="Birth Date" formControlName="birthDate">
-            <mat-datepicker-toggle matSuffix [for]="birthDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #birthDatePicker startView="multi-year" [startAt]="startDate"></mat-datepicker>
-          </mat-form-field>
-        </div>
-
-        <div id="address">
-          <mat-form-field>
-            <mat-label>Address</mat-label>
-            <input matInput formControlName="address">
-          </mat-form-field>
+        <div>
           <mat-form-field>
             <mat-label>Zip Code</mat-label>
             <input matInput formControlName="zipCode">
+            <mat-error *ngIf="familyForm.get('zipCode').hasError('pattern')">Zipcode must be exactly five digits (example: 64359).</mat-error>
+            <mat-error *ngIf="familyForm.get('zipCode').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
-        </div>
-
-        <div id="contact">
           <mat-form-field>
             <mat-label>Phone Number</mat-label>
             <input matInput formControlName="phoneNumber">
+            <mat-error *ngIf="familyForm.get('phoneNumber').hasError('pattern')">Phone number must be in the following format: 555-555-5555.</mat-error>
+            <mat-error *ngIf="familyForm.get('phoneNumber').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
           <mat-form-field>
-            <mat-label>Email Address</mat-label>
+            <mat-label>Email Address (optional)</mat-label>
             <input matInput formControlName="emailAddress">
+            <mat-error *ngIf="familyForm.get('emailAddress').hasError('email')">Email address must include the @ symbol.</mat-error>
           </mat-form-field>
-        </div>  
+        </div>
 
-        <div id="familySize">
+        <div>
           <mat-form-field>
             <mat-label>Family Size</mat-label>
-            <mat-select matInput formControlName="familySize" required>
+            <mat-select matInput formControlName="familySize">
               <mat-option [value]=1>1</mat-option>
               <mat-option [value]=2>2</mat-option>
               <mat-option [value]=3>3</mat-option>
@@ -65,29 +53,49 @@
               <mat-option [value]=8>8</mat-option>
               <mat-option [value]=9>9+</mat-option>
             </mat-select>
+            <mat-error *ngIf="familyForm.get('familySize').hasError('required')">{{requiredError}}</mat-error>  
           </mat-form-field>
           <mat-form-field>
             <mat-label>School Aged Children</mat-label>
-            <mat-select matInput formControlName="schoolChildren" required>
+            <mat-select matInput formControlName="schoolChildren">
               <mat-option [value]=0>0</mat-option>
               <mat-option [value]=1>1</mat-option>
               <mat-option [value]=2>2</mat-option>
               <mat-option [value]=3>3</mat-option>
               <mat-option [value]=4>4</mat-option>
               <mat-option [value]=5>5</mat-option>
-              <mat-option [value]=6>6</mat-option>
-              <!-- <mat-option [value]=7>7</mat-option>
-              <mat-option [value]=8>8</mat-option>
-              <mat-option [value]=9>9+</mat-option> -->
+              <mat-option [value]=6>6+</mat-option>
             </mat-select>
+            <mat-error *ngIf="familyForm.get('schoolChildren').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
-        </div>  
+          <mat-form-field>
+            <mat-label>Any Infants in the Family?</mat-label>
+            <mat-select matInput formControlName="infants">
+              <mat-option [value]=true>Yes</mat-option>
+              <mat-option [value]=false>No</mat-option>
+            </mat-select>
+            <mat-error *ngIf="familyForm.get('infants').hasError('required')">{{requiredError}}</mat-error>  
+          </mat-form-field>  
+        </div>
+        
+        <div>
+          <mat-form-field>
+            <mat-label>Were you referred by CELC?</mat-label>
+            <mat-select matInput formControlName="referral">
+              <mat-option [value]=true>Yes</mat-option>
+              <mat-option [value]=false>No</mat-option>
+            </mat-select>
+            <mat-error *ngIf="familyForm.get('referral').hasError('required')">{{requiredError}}</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div id="button-space">
+          <div></div>
+          <button mat-raised-button (click)="onGoShoppingClick()" [disabled]="!familyForm.valid">Go Shopping</button>
+        </div>
 
       </form>
-      <div id="buttonSpace">
-        <div></div>
-        <button mat-raised-button (click)="onGoShoppingClick()">Go Shopping</button>
-      </div>
+
     </mat-card>
   </main>  
 </div>
