--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar>
-  <span>Broad Street Food Pantry</span>
-  <button mat-button>About</button>
-  <button mat-button>Contact</button>
-  <button (click)="authService.logout()" *ngIf="authService.loggedIn">Log Out</button> 
+  <img src="../../../assets/images/bsfp-logo-navbar.png" alt="bsfp-logo-navbar">
+  <button mat-raised-button (click)="openQuestionsModal()">{{buttonContent}}</button> 
+  <button mat-raised-button (click)="authService.logout()" *ngIf="authService.loggedIn">Log Out</button>
 </mat-toolbar>
