--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="flex-grid">                
     
     <summary class="button-container" id="left">
@@ -30,5 +31,4 @@
     </nav>  
 
 </div>
-<img src="../../../assets/images/fruit.png" id="fruit"> 
 
