--- a/src/app/components/family/family.component.css
+++ b/src/app/components/family/family.component.css
@@ -26,7 +26,7 @@
 #family-form .mat-card {
     background: #46a8d0;
 }
-button {
+.mat-raised-button {
     background-color: #F6D936;
     border: solid black .5px;
     border-radius: 5px;
@@ -37,5 +37,5 @@ button {
     justify-content: space-between;
 }
 .mat-error {
-    color: #A71E2A;
+    color: black;
 }
