--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -91,7 +91,7 @@
 
         <div id="button-space">
           <div></div>
-          <button mat-raised-button (click)="onGoShoppingClick()" [disabled]="!familyForm.valid">Go Shopping</button>
+          <button mat-raised-button (click)="onNextClick()" [disabled]="!familyForm.valid">Next</button>
         </div>
 
       </form>
