--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,6 @@
 <mat-card [ngClass]="{'sub-product' : subProduct}">
   <mat-card-title [ngClass]="{'sub-mat-card-title' : subProduct}">{{product.productName}}
-      <span class="amount" *ngIf="amountInCart !== 0">{{amountInCart + ' in Cart'}}</span> 
+    <span class="amount" *ngIf="amountInCart !== 0">{{amountInCart + ' in Cart'}}</span> 
   </mat-card-title>
   <mat-card-content> 
     <div class="grid-container" [ngClass]="{'sub-product-grid-container' : subProduct}">
@@ -10,12 +10,12 @@
       </div>
       <div> 
         <ng-container *ngIf="!pointProduct">
-          <button mat-button (click)="removeOne()" [disabled]="!inCart">-</button>
-          <button mat-button (click)="addOne()" [disabled]="atMaxAmount || atTypeMaxAmount">+</button>
+          <button mat-raised-button (click)="removeOne()" [disabled]="!inCart">-</button>
+          <button mat-raised-button (click)="addOne()" [disabled]="atMaxAmount || atTypeMaxAmount">+</button>
         </ng-container>
         <ng-container *ngIf="pointProduct">
-          <button mat-button (click)="removeOnePoints()" [disabled]="!inCart">-</button>
-          <button mat-button (click)="addOnePoints()" [disabled]="pointDisabled || atTypeMaxAmount">+</button>
+          <button mat-raised-button (click)="removeOnePoints()" [disabled]="!inCart">-</button>
+          <button mat-raised-button (click)="addOnePoints()" [disabled]="pointDisabled || atTypeMaxAmount">+</button>
         </ng-container>
       </div>   
     </div>
