--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,7 +1,8 @@
 <app-navbar></app-navbar>
-<div class="flex-grid">                
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<div class="flex-grid" *ngIf="!isLoading">                
     
-    <summary class="button-container" id="left">
+    <summary class="family-container" id="left">
         <mat-toolbar>Family Info</mat-toolbar>
         <mat-card >
             Family Name: 
@@ -9,11 +10,10 @@
         </mat-card>
         <mat-card> {{'Family Size: ' + family.familySize}}</mat-card>
         <mat-card *ngIf="family.schoolChildren !== 0">{{'School Children: ' + family.schoolChildren}}</mat-card>
-        <mat-card>
-            Choice Points:
-            <div>{{ currentPoints + ' / ' + maxPoints}}</div>
-        </mat-card>
-        <button mat-raised-button color (click)="onBackToFamilyClick()">Back to Family</button>
+        <mat-card *ngIf="family.infants">Infants: Included</mat-card>
+        <div id="family-button-container">
+            <button mat-raised-button id="family-button" (click)="onBackToFamilyClick()">Back to Family</button>
+        </div>
     </summary>    
     
     <main id="middle">
@@ -24,11 +24,19 @@
             </ng-container>
         </cdk-virtual-scroll-viewport>     
     </main>
-    
-    <nav class="button-container" id="right">
-        <mat-toolbar>Ready to Place Order?</mat-toolbar> 
-        <button mat-raised-button (click)="onReviewCartClick()">Review Cart</button>
-    </nav>  
+
+    <aside id="points-order-container">
+        <aside>
+            <mat-toolbar>Choice Points</mat-toolbar>
+            <mat-card id="points">{{ currentPoints + ' / ' + maxPoints}}</mat-card>
+        </aside>
+        <nav>
+            <mat-toolbar>Ready to Place Order?</mat-toolbar>
+            <mat-card id="cart-button-container">
+                <button mat-raised-button  (click)="onReviewCartClick()">Review Cart</button>
+            </mat-card>
+        </nav>
+    </aside>  
 
 </div>
 
