--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 @import "~@angular/material/prebuilt-themes/purple-green.css";
 body {
-  /* background: #46a8d0; */
   background-image: url(./assets/images/diagonal_waves.png);
 }
 .mat-content {
@@ -10,16 +9,16 @@ body {
 flex: 1;
 }
 .mat-form-field {
-  width: 350px !important;
+  width: 350px;
 }
 .mat-focused .mat-form-field-label {
   color: black !important;
 }
 .mat-form-field-ripple {
- background-color: rgb(12, 11, 11) !important;;
+  background-color: black !important;
 }
 .mat-form-field.ng-touched.ng-invalid .mat-form-field-label {
-  color: #A71E2A !important;
+  color: black !important;
 }
 .mat-datepicker-content {
   background:  rgb(18, 122, 117);
@@ -35,7 +34,20 @@ flex: 1;
   border-radius: 10px;
 }
 .mat-raised-button[disabled][disabled] {
+  color: #202020;
   background-color: #F6D936;
-  opacity: 0.7;
+  opacity: .3;
+}
+.mat-raised-button[disabled][disabled]:hover {
+  cursor: not-allowed;
+}
+.mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+  color: orange;
+}
+.mat-form-field .mat-select.mat-select-invalid .mat-select-arrow {
+  color: black;
+}
+.mat-form-field.mat-focused.mat-primary .mat-select-arrow {
+  color: black;
 }
 
